# bit-country

./: Cargo.toml  README.md
src/: canvas.rs  direction.rs  fren.rs  lib.rs  main.rs  sprite.rs
static/: bit_country.js  bit_country_bg.wasm  index.html
