[package]
name = "bit_country"
version = "0.1.0"
authors = ["Ryan Pitts <ryanpitts@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
gloo = "*"

[dependencies.web-sys]
version = "*"
features = [
    "CanvasRenderingContext2d",
    "console",
    "Document",
    "Element",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "Window",
    "EventListener",
    "EventTarget",
]